# boost_gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  conanfile.py  docker-compose.yml
demo/games/: CMakeLists.txt
demo/games/tank_battle/: README.md
examples/: CMakeLists.txt
examples/admin_demo/: admin_demo_main.cpp
examples/battle/: CMakeLists.txt  battle_server_main.cpp
examples/echo/: CMakeLists.txt  client_main.cpp  server_main.cpp
examples/hello/: CMakeLists.txt  main.cpp
examples/login/: CMakeLists.txt  login_server_main.cpp
examples/login_demo/: login_demo_main.cpp
examples/pressure/: gateway_pressure_main.cpp
examples/realtime_echo_plugin/: CMakeLists.txt
examples/room/: CMakeLists.txt  room_server_main.cpp
examples/v2_arch_benchmark/: CMakeLists.txt
examples/v2_battle_backend/: CMakeLists.txt
examples/v2_gateway_demo/: CMakeLists.txt  main.cpp
examples/v2_gateway_pressure/: CMakeLists.txt  final_message_counts.h  load_evidence.h  main.cpp  stall_watchdog_policy.h  termination_policy.h
examples/v2_leaderboard_backend/: CMakeLists.txt  main.cpp
examples/v2_login_backend/: CMakeLists.txt  main.cpp
examples/v2_match_backend/: CMakeLists.txt  main.cpp
examples/v2_room_backend/: CMakeLists.txt
proto/: CMakeLists.txt  README.md
proto/v3/: battle.proto  common.proto  gateway.proto  login.proto  raft.proto  room.proto
sdk/: CMakeLists.txt
sdk/cmake/: boost_gateway_sdk-config.cmake.in
sdk/csharp/: SdkClient.cs  SdkClient.csproj
sdk/docs/: README.md  compatibility.md  distribution-matrix.json  quickstart.md  roadmap.md
sdk/examples/: CMakeLists.txt  python_full_flow.py
sdk/examples/csharp_full_flow/: Program.cs
sdk/examples/echo_client/: main.cpp
sdk/examples/full_flow_client/: main.cpp
sdk/python/: __init__.py  pyproject.toml  setup.py
sdk/src/: c_api.cpp  client.cpp  connection.cpp  grpc_client.cpp
sdk/src/transport/: connection_pool.cpp  tcp_transport.cpp
sdk/tests/: CMakeLists.txt  sdk_integration_test.cpp  sdk_test.cpp
sdk/tests/unit/: c_api_test.cpp  client_test.cpp  codec_test.cpp  transport_test.cpp
src/: CMakeLists.txt  echo_client.cpp  echo_server.cpp  session.cpp
src/app/: CMakeLists.txt  boost_exception_bridge.cpp  config.cpp  crash_handler.cpp  logging.cpp  process_supervisor.cpp
src/game/: CMakeLists.txt
src/game/battle/: CMakeLists.txt  battle_manager.cpp  battle_service.cpp
src/game/gateway/: CMakeLists.txt  admin_service.cpp  gateway_metrics_exporter.cpp  gateway_server.cpp  gateway_service.cpp  session_manager.cpp
src/game/login/: CMakeLists.txt  login_recovery.cpp  login_service.cpp  token_validator.cpp
src/game/room/: CMakeLists.txt  room_battle_lifecycle.cpp  room_manager.cpp  room_service.cpp
src/hello/: CMakeLists.txt  hello.cpp
src/net/: CMakeLists.txt  http_manager.cpp  session.cpp
src/v2/: CMakeLists.txt
src/v2/actor/: actor.cpp  actor_ref.cpp
src/v2/aoi/: aoi_grid.cpp
src/v2/auth/: jwks_key_resolver.cpp
src/v2/battle/: battle_actor.cpp  battle_backend_service.cpp  battle_instance_plugin.cpp  game_systems.cpp  runtime_world.cpp  tank_battle_plugin.cpp
src/v2/config/: config_watcher.cpp
src/v2/data/: cached_data_store.cpp  write_behind_store.cpp
src/v2/diagnostics/: diagnostics_manager.cpp  runtime_metrics_exporter.cpp
src/v2/gateway/: battle_data_store.cpp  battle_protocol_codec.cpp  demo_server.cpp  gateway_actor.cpp  gateway_command_parser.cpp  gateway_server_bridge.cpp  gateway_service_bridge.cpp  runtime.cpp  session_adapter.cpp
src/v2/grpc/: gateway_grpc_server.cpp  gateway_grpc_server.h  grpc_adapter.h  grpc_server.h
src/v2/io/: io_engine.cpp
src/v2/leaderboard/: leaderboard_service.cpp
src/v2/login/: login_backend_service.cpp
src/v2/match/: matchmaking_service.cpp
src/v2/memory/: arena.cpp
src/v2/perf/: perf_counter.cpp
src/v2/persistence/: writebehind.cpp
src/v2/player/: README.md  player_actor.cpp
src/v2/realtime/: instance_runtime.cpp
src/v2/room/: room_actor.cpp  room_backend_service.cpp
src/v2/runtime/: actor_system.cpp
src/v2/service/: backend_connection.cpp  backend_envelope.cpp  backend_frame_codec.cpp  backend_server.cpp  circuit_breaker.cpp  envelope_adapter.cpp  error_codes.cpp  service_manifest.cpp  service_registrar.cpp
src/v2/test/: fault_injector.cpp
src/v3/: CMakeLists.txt
src/v3/cluster/: CMakeLists.txt  cluster_router.cpp  raft.cpp  raft_command_codec.cpp  raft_state_codec.cpp  raft_wire_codec.cpp
src/v3/persistence/: CMakeLists.txt  redis_client.cpp  redis_connection_pool.cpp  redis_event_store.cpp  redis_leaderboard.cpp
tests/chaos/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt
tests/integration/: CMakeLists.txt  gateway_integration_test.cpp  http_management_test.cpp
tests/perf/: CMakeLists.txt  grpc_vs_tcp_perf_test.cpp
tests/security/: CMakeLists.txt
tests/unit/: CMakeLists.txt  admin_service_test.cpp  battle_manager_test.cpp  compressor_test.cpp  config_test.cpp  gateway_metrics_exporter_test.cpp  hello_test.cpp  lifecycle_assembly_test.cpp  matchmaking_test.cpp  message_dispatcher_test.cpp  packet_codec_test.cpp  packet_fuzz_test.cpp  persistence_replay_audit_test.cpp  redis_event_store_test.cpp  room_battle_lifecycle_test.cpp  room_manager_test.cpp  service_registration_test.cpp  session_close_test.cpp  session_manager_test.cpp  token_validator_test.cpp
tests/v2/: CMakeLists.txt
tests/v2/integration/: backend_routing_test.cpp  business_flow_test.cpp  demo_server_smoke_test.cpp  grpc_gateway_adapter_e2e_test.cpp  matchmaking_e2e_test.cpp  multi_process_test.cpp  multi_process_test.h  process_supervisor_test.cpp  raft_e2e_test.cpp  service_bus_integrity_test.cpp  settlement_replay_test.cpp
tests/v2/unit/: actor_runtime_test.cpp  anti_cheat_test.cpp  aoi_system_test.cpp  battle_actor_test.cpp  battle_archive_test.cpp  battle_authoritative_test.cpp  battle_determinism_test.cpp  battle_lifecycle_test.cpp  battle_protocol_codec_test.cpp  battle_replay_test.cpp  battle_runtime_world_test.cpp  battle_systems_test.cpp  (+49 more)
(+693 files in other folders)
