add_subdirectory(hello)
add_subdirectory(echo)
add_subdirectory(pressure)
add_subdirectory(login)
add_subdirectory(room)
add_subdirectory(battle)
add_subdirectory(login_demo)
add_subdirectory(room_demo)
add_subdirectory(battle_demo)
add_subdirectory(admin_demo)
add_subdirectory(v2_gateway_demo)
add_subdirectory(v2_login_backend)
add_subdirectory(v2_room_backend)
add_subdirectory(v2_battle_backend)
add_subdirectory(v2_gateway_pressure)
